--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>31 May 1983</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>vinodvikraman.github.io/Portfolio/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+971 52 458 3893</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Al satwa, Dubai, UAE.</span></li>
                 </ul>
@@ -296,7 +296,7 @@
               <p><em>Ariesaads Multimedia, Kollam, Kerala.</em></p>
               <ul>
                 <li>Visual Studio Code, Html5, CSS, JQuery, Bootstrap, Adobe XD, Photoshop, Illustrator, Indesign.</li>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
+                <li>Developed numerous marketing programs (logos, brochures, infographics, presentations, and advertisements).</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Front End Web Designing, UI Designing, Print Designs, Designs for Web & Social media</li>
               </ul>
