--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Vinod Vikraman</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 15+ years of experience designing
